cmake_minimum_required(VERSION 3.15)

project(Structure VERSION 1.0)

enable_testing()
set(CMAKE_EXPORT_COMPILE_COMMANDS True)

find_program(BASH_EXECUTABLE NAMES bash REQUIRED)

add_library(structure_compiler_flags INTERFACE)
target_compile_features(structure_compiler_flags INTERFACE c_std_99)
target_compile_options(structure_compiler_flags INTERFACE "-g;-Wall;-Wextra;-Wpedantic;-Wshadow;-Wconversion;-fsanitize=undefined,address;-Wfloat-equal;-Wformat-nonliteral;-Wformat-security;-Wformat-y2k;-Wformat=2;-Wimport;-Winvalid-pch;-Wlogical-op;-Wmissing-declarations;-Wmissing-field-initializers;-Wmissing-format-attribute;-Wmissing-include-dirs;-Wmissing-noreturn;-Wnested-externs;-Wpacked;-Wpointer-arith;-Wredundant-decls;-Wstack-protector;-Wswitch-enum;-Wundef;-Wwrite-strings")
add_subdirectory(trace)
add_subdirectory(ArrayList)
add_subdirectory(DoubleLinkedList)
add_subdirectory(CircularLinkedList)
add_subdirectory(LinkedList)
add_subdirectory(SymmetricMatrix)
add_subdirectory(Stack)
add_subdirectory(Queue)
add_subdirectory(HashTable)
add_subdirectory(AbstractBinaryTree)
add_subdirectory(BinarySearchTree)
add_subdirectory(AVLTree)
add_subdirectory(Graph)

add_subdirectory(test/ArrayList)
add_subdirectory(test/DoubleLinkedList)
add_subdirectory(test/CircularLinkedList)
add_subdirectory(test/LinkedList)
add_subdirectory(test/SymmetricMatrix)
add_subdirectory(test/Stack)
add_subdirectory(test/Queue)
add_subdirectory(test/HashTable)
add_subdirectory(test/AbstractBinaryTree)
add_subdirectory(test/BinarySearchTree)
add_subdirectory(test/AVLTree)
add_subdirectory(test/Graph)